--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Matthew Jones <matburt@redhat.com>",
 
 [tool.poetry.dependencies]
 python = "^3.6"
+requests = "^2.23.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -19,10 +20,6 @@ yamllint = "^1.20.0"
 black = "^19.10b0"
 sphinx = "^2.4.4"
 
-
-[build-system]
-requires = ["poetry>=1.0.5"]
-build-backend = "poetry.masonry.api"
 
 [tool.black]
 line-length = 100
@@ -44,3 +41,8 @@ exclude = '''
   | packaging
 )/
 '''
+
+[build-system]
+requires = ["poetry>=1.0.5"]
+build-backend = "poetry.masonry.api"
+
