--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ authors = ["Matthew Jones <matburt@redhat.com>",
 python = "^3.6"
 requests = "^2.23.0"
 
+[tool.poetry.scripts]
+ansible-exec-env = 'ansible_exec_env.cli:run'
+
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 flake8 = "^3.7.9"
