--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ basepython = python3
 commands=
     poetry install
     poetry run flake8 --version
-    poetry run flake8 setup.py docs ansible_exec_env test
+    poetry run flake8 setup.py docs ansible_builder test
     poetry run yamllint --version
     poetry run yamllint -s .
 
