tox: Specify lower limit for poetry

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,19 @@
 envlist = linters, py3
 isolated_build = True
 
+[tox:.package]
+## Required for poetry
+# note tox will use the same python version as under what tox is installed to package
+# so unless this is python 3 you can require a given python version for the packaging
+# environment via the basepython key
+basepython = python3
+
 [testenv]
-deps = poetry
+deps = poetry >= 1.0.5
+commands =
+    poetry install
+    poetry env info
+    poetry run py.test -v test
 
 [testenv:linters]
 basepython = python3
@@ -13,9 +24,3 @@ commands=
     poetry run flake8 setup.py docs ansible_builder test
     poetry run yamllint --version
     poetry run yamllint -s .
-
-[testenv:py3]
-basepython = python3
-commands =
-    poetry install
-    poetry run py.test -v test
