Packaging: Introducing RPM packaging

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,6 @@ basepython = python3
 commands=
     poetry install
     poetry run flake8 --version
-    poetry run flake8 setup.py docs ansible_builder test
+    poetry run flake8 ansible_builder test
     poetry run yamllint --version
     poetry run yamllint -s .
