Packaging: Introduce setup.py

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = linters, py3
+envlist = linters, py3, insync
 isolated_build = True
 
 [tox:.package]
@@ -24,3 +24,13 @@ commands=
     poetry run flake8 ansible_builder test
     poetry run yamllint --version
     poetry run yamllint -s .
+
+# Tox target to ensure both pyproject.toml and setup.py are in sync
+#
+[testenv:insync]
+whitelist_externals =
+    diff
+commands =
+    poetry install
+    poetry run dephell deps convert --from=pyproject.toml --to-format=setuppy --to-path=setup-to-compare.py
+    diff setup.py setup-to-compare.py
