Update tox file to remove setup-to-compare.py

--- a/tox.ini
+++ b/tox.ini
@@ -34,3 +34,4 @@ commands =
     poetry install
     poetry run dephell deps convert --from=pyproject.toml --to-format=setuppy --to-path=setup-to-compare.py
     diff setup.py setup-to-compare.py
+    rm setup-to-compare.py
