add option to pass addtional pytest args

--- a/tox.ini
+++ b/tox.ini
@@ -44,4 +44,4 @@ commands =
     mkdir -p artifacts
     poetry install
     poetry env info
-    poetry run pytest test/integration -v -n 4 --junitxml=artifacts/results.xml
+    poetry run pytest test/integration -v -n 4 --junitxml=artifacts/results.xml {posargs}
