fix problem with tox + rootless podman (thanks shane)

--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,8 @@ commands =
 
 # Tox target to ensure both pyproject.toml and setup.py are in sync
 [testenv:integration]
+# rootless podman reads $HOME
+passenv = HOME
 whitelist_externals =
     mkdir
 commands =
