Skip install in tox
We explicitly call `poetry install`, which handles installing ansible-builder

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ isolated_build = True
 basepython = python3
 
 [testenv]
+skip_install = true
 deps = poetry >= 1.0.5
 commands =
     poetry install
