--- a/test/data/awx/requirements.yml
+++ b/test/data/awx/requirements.yml
@@ -7,9 +7,7 @@ collections:
   - name: https://github.com/AlanCoding/azure.git
     version: ee_req  # spec must point to requirements-azure.txt
     type: git
-  - name: https://github.com/alancoding/amazon.aws.git
-    version: ee_req  # had no requirements file before
-    type: git
+  - name: amazon.aws  # PR 125 is in 1.1.0
   - name: theforeman.foreman  # has requirements.txt (which -r to another file)
   - name: google.cloud  # has requirements.txt, mainly for google-auth
   # forked from opendev.org
