Put deps on a diet
Removing dephell from our main dep list removes 38 dependencies.

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,10 @@ commands=
 [testenv:insync]
 whitelist_externals =
     diff
+    rm
+deps =
+     poetry
+     dephell
 commands =
     poetry install
     poetry run dephell deps convert --from=pyproject.toml --to-format=setuppy --to-path=setup-to-compare.py
