Remove introspect step
Add introspect method, move combine logic back to main
  Fill in missing file reads

fix line type bug

Split out introspect sanity tests and remove outdated param

further simplify ovirt.ovirt in awx example

Unit test copy_file just like write_file

--- a/test/data/awx/requirements.yml
+++ b/test/data/awx/requirements.yml
@@ -14,7 +14,7 @@ collections:
     type: git
   - name: community.vmware  # has requirements.txt, but may add pyvcloud
   - name: https://github.com/alancoding/ovirt-ansible-collection.git
-    version: ee_req  # had no requirements file, only needs single sdk lib
+    version: ee_req  # had no needs single sdk python lib and pycurl
     type: git
   - name: https://github.com/AlanCoding/community.kubernetes.git
     version: ee_req
