Add python 3.8 to envlist

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = linters, py3, insync, integration
+envlist = linters, py3, py38, insync, integration
 isolated_build = True
 
 [tox:.package]
