Fix editable pip installations.
The build process needs setuptools before reading setup.py, which means
it needs to be specified in pyproject.toml's `build-system` table.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,5 +46,5 @@ exclude = '''
 '''
 
 [build-system]
-requires = ["poetry>=1.0.5"]
+requires = ["setuptools", "poetry>=1.0.5"]
 build-backend = "poetry.masonry.api"
