Add integration testing job
This will allow us to use speculative ansible-runner containers,
allowing for better cross-project testing with ansible-runner.

This job is non-voting for now, until we fix test failures.

Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -46,9 +46,10 @@ commands =
 # rootless podman reads $HOME
 passenv = HOME
 whitelist_externals =
+    bash
     mkdir
 commands =
     mkdir -p artifacts
     poetry install
     poetry env info
-    poetry run pytest test/integration -v -n 4 --junitxml=artifacts/results.xml {posargs}
+    bash -c 'poetry run pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
