Switch to ubuntu-bionic-4vcpu for integration jobs
Let see if this speeds things up a little.

Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.d/jobs.yaml
+++ b/.zuul.d/jobs.yaml
@@ -11,6 +11,7 @@
     parent: ansible-tox-py38
     requires:
       - ansible-runner-container-image
+    nodeset: ubuntu-bionic-4vcpu
     vars:
       tox_envlist: integration
       tox_install_siblings: false
