Set ansible-builder-tox-integration voting
With tests all passing now, we can make this job voting.

Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -2,5 +2,7 @@
 - project:
     check:
       jobs:
-        - ansible-builder-tox-integration:
-            voting: false
+        - ansible-builder-tox-integration
+    gate:
+      jobs:
+        - ansible-builder-tox-integration
