--- a/.zuul.d/jobs.yaml
+++ b/.zuul.d/jobs.yaml
@@ -11,6 +11,7 @@
     parent: ansible-tox-py38
     requires:
       - ansible-runner-container-image
+      - python-builder-container-image
     nodeset: ubuntu-bionic-4vcpu
     vars:
       tox_envlist: integration
