--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps = poetry >= 1.0.5
 commands =
     poetry install
     poetry env info
-    poetry run py.test -v test -k "not integration"
+    poetry run py.test -v test -k "not integration" {posargs}
 
 [testenv:linters]
 basepython = python3
