DNM - testing new jbos
Depends-On: https://github.com/ansible/ansible-zuul-jobs/pull/738
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -1,5 +1,7 @@
 ---
 - project:
+    templates:
+      - publish-to-pypi-poetry
     check:
       jobs:
         - ansible-builder-tox-integration:
