--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,7 @@ exclude=.tox
 max-line-length=160
 ignore=E201,E203,E221,E225,E231,E241,E251,E261,E265,E303,W291,W391,W293,E731,F405
 exclude=.tox
+
+[entry_points]
+console_scripts =
+    ansible-builder = ansible_builder.cli:run
