Include package in wheel generated by PBR

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,3 +31,7 @@ exclude=.tox
 [entry_points]
 console_scripts =
     ansible-builder = ansible_builder.cli:run
+
+[files]
+packages =
+    ansible_builder
