--- a/test/data/build_args/base-image.yml
+++ b/test/data/build_args/base-image.yml
@@ -1,5 +1,5 @@
 ---
 additional_build_steps:
   prepend:
-    - ARG ANSIBLE_RUNNER_BASE_IMAGE
-    - RUN echo $ANSIBLE_RUNNER_BASE_IMAGE > /base_image
+    - ARG ANSIBLE_RUNNER_IMAGE
+    - RUN echo $ANSIBLE_RUNNER_IMAGE > /base_image
