Make the integration job voting

--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -3,4 +3,6 @@
     check:
       jobs:
         - ansible-builder-tox-integration:
-            voting: false
+    gate:
+      jobs:
+        - ansible-builder-tox-integration:
