--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -2,7 +2,7 @@
 - project:
     check:
       jobs:
-        - ansible-builder-tox-integration:
+        - ansible-builder-tox-integration
     gate:
       jobs:
-        - ansible-builder-tox-integration:
+        - ansible-builder-tox-integration
