Allow user to toggle image clean up for integration tests
It is possible, a user want to debug a container created via integration
tsts.  Also, we may want to disable clean ups, in the case of CI.

Either way, add a flag to toggle the deleting of images.

Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,9 @@ commands=
 
 [testenv:integration]
 # rootless podman reads $HOME
-passenv = HOME
+passenv =
+  HOME
+  KEEP_IMAGES
 deps =
     pytest-xdist
 whitelist_externals =
