Disable test parallelization

--- a/tox.ini
+++ b/tox.ini
@@ -34,4 +34,4 @@ whitelist_externals =
     mkdir
 commands =
     mkdir -p artifacts
-    bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
+    bash -c 'pytest test/integration -v --junitxml=artifacts/results.xml {posargs}'
