Pre-build docker images for integration tests too

--- a/tox.ini
+++ b/tox.ini
@@ -36,4 +36,5 @@ commands =
     mkdir -p artifacts
     python setup.py sdist
     podman build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
+    docker build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
     bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
