--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -3,6 +3,18 @@
     check:
       jobs:
         - ansible-builder-tox-integration
+        - ansible-builder-build-container-image
     gate:
       jobs:
         - ansible-builder-tox-integration
+        - ansible-builder-build-container-image
+    post:
+      jobs:
+        - ansible-builder-upload-container-image:
+            vars:
+              upload_container_image_promote: false
+    periodic:
+      jobs:
+        - ansible-builder-upload-container-image:
+            vars:
+              upload_container_image_promote: false
