Only run github-workflow when those files change
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -4,10 +4,16 @@
       jobs:
         # - ansible-builder-tox-integration
         - ansible-builder-build-container-image
+        - github-workflows:
+            files:
+              - .github/workflows/.*
     gate:
       jobs:
         # - ansible-builder-tox-integration
         - ansible-builder-build-container-image
+        - github-workflows:
+            files:
+              - .github/workflows/.*
     post:
       jobs:
         - ansible-builder-upload-container-image:
