Add podman to tox allowlist_externals for integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -29,9 +29,10 @@ passenv =
   KEEP_IMAGES
 deps =
     pytest-xdist
-whitelist_externals =
+allowlist_externals =
     bash
     mkdir
+    podman
 commands =
     mkdir -p artifacts
     python setup.py sdist
