--- a/tox.ini
+++ b/tox.ini
@@ -40,3 +40,8 @@ commands =
     podman build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
     docker build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
     bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
+
+[testenv:docs]
+deps = -r{toxinidir}/docs/requirements.txt
+commands = 
+    sphinx-build -E -W -d docs/build/doctrees -b html docs docs/build/html
