Add docs tox target and Zuul docs check/gate job.

--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -3,6 +3,9 @@
     check:
       jobs:
         # - ansible-builder-tox-integration
+        - ansible-tox-docs:
+            vars:
+                sphinx_build_dir: docs/build
         - ansible-builder-build-container-image
         - github-workflows:
             files:
@@ -10,6 +13,9 @@
     gate:
       jobs:
         # - ansible-builder-tox-integration
+        - ansible-tox-docs:
+            vars:
+                sphinx_build_dir: docs/build
         - ansible-builder-build-container-image
         - github-workflows:
             files:
