--- a/setup.cfg
+++ b/setup.cfg
@@ -7,9 +7,9 @@ home-page = https://ansible-builder.readthedocs.io
 description-file = README.md
 
 [flake8]
+# W503 - Line break occurred before a binary operator
+ignore=W503
 max-line-length=160
-ignore=E201,E203,E221,E225,E231,E241,E251,E261,E265,E303,W291,W391,W293,E731,F405
-exclude=.tox
 
 [entry_points]
 console_scripts =
