Add ansible-tox-py38 job
We are missing py38 jobs, lets start testing them since we deliver
builder as python38 downstream.

Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/.zuul.d/project.yaml
+++ b/.zuul.d/project.yaml
@@ -7,6 +7,7 @@
         - ansible-tox-docs:
             vars:
                 sphinx_build_dir: docs/build
+        - ansible-tox-py38
         - github-workflows:
             files:
               - .github/workflows/.*
