Update pytest settings

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,12 @@
 [pytest]
 markers =
     run_command: tests that use the run_command utility which runs a subprocess, had some historical issues
+addopts =
+    --color yes
+    --cov
+    --cov-append
+    --cov-report html
+    --cov-report xml
+    --cov-report term
+    --forked
+    -r a
