--- a/tox.ini
+++ b/tox.ini
@@ -7,15 +7,11 @@ usedevelop = True
 setenv =
   VIRTUAL_ENV={envdir}
 deps =
-    pytest
+    -r {toxinidir}/test/requirements.txt
 commands =
     py.test -v test -k "not integration" {posargs}
 
 [testenv:linters]
-deps =
-    flake8
-    pylint
-    yamllint
 commands=
     flake8 --version
     flake8 ansible_builder test
@@ -27,8 +23,6 @@ commands=
 passenv =
     HOME
     KEEP_IMAGES
-deps =
-    pytest-xdist
 allowlist_externals =
     bash
     docker
