--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
----
-
 name: CI
 
 on:
@@ -10,21 +8,44 @@ on:
     branches: [devel]
 
 jobs:
-  integration:
+  docs:
+    name: Docs
     runs-on: ubuntu-20.04
-    name: Integration
+    container:
+      image: quay.io/ansible/ansible-buidler-test-container:1.0.0
+      env:
+        PIP_CACHE_DIR: ${{ runner.temp }}/.cache/pip
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
+      - name: Build docs
+        run: tox -e docs
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox
+  lint:
+    name: Lint
+    runs-on: ubuntu-20.04
+    container:
+      image: quay.io/ansible/ansible-buidler-test-container:1.0.0
+      env:
+        PIP_CACHE_DIR: ${{ runner.temp }}/.cache/pip
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      - name: Run integration tests
-        run: |
-          tox -e integration
+      - name: Build docs
+        run: tox -e linters
+
+  integration:
+    name: Integration
+    runs-on: ubuntu-20.04
+    container:
+      image: quay.io/ansible/ansible-buidler-test-container:1.0.0
+      env:
+        PIP_CACHE_DIR: ${{ runner.temp }}/.cache/pip
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Tests
+        run: tox -e integration
