--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,44 +8,30 @@ on:
     branches: [devel]
 
 jobs:
-  docs:
-    name: Docs
+  ci:
+    name: ${{ matrix.test.name }}
     runs-on: ubuntu-20.04
     container:
       image: quay.io/ansible/ansible-buidler-test-container:1.0.0
       env:
         PIP_CACHE_DIR: ${{ runner.temp }}/.cache/pip
+
+    strategy:
+      fail-fast: false
+      matrix:
+        test:
+          - name: Lint
+            env: linters
+
+          - name: Docs
+            env: docs
+
+          - name: Integration
+            env: integration
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Build docs
-        run: tox -e docs
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-20.04
-    container:
-      image: quay.io/ansible/ansible-buidler-test-container:1.0.0
-      env:
-        PIP_CACHE_DIR: ${{ runner.temp }}/.cache/pip
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Build docs
-        run: tox -e linters
-
-  integration:
-    name: Integration
-    runs-on: ubuntu-20.04
-    container:
-      image: quay.io/ansible/ansible-buidler-test-container:1.0.0
-      env:
-        PIP_CACHE_DIR: ${{ runner.temp }}/.cache/pip
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Tests
-        run: tox -e integration
+        run: tox -e ${{ matrix.test.env }}
