Use constraints tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -7,15 +7,12 @@ usedevelop = True
 setenv =
   VIRTUAL_ENV={envdir}
 deps =
-    pytest
+    -r {toxinidir}/test/requirements.txt
+    -c {toxinidir}/test/constraints.txt
 commands =
     py.test -v test -k "not integration" {posargs}
 
 [testenv:linters]
-deps =
-    flake8
-    pylint
-    yamllint
 commands=
     flake8 --version
     flake8 ansible_builder test
@@ -27,8 +24,6 @@ commands=
 passenv =
     HOME
     KEEP_IMAGES
-deps =
-    pytest-xdist
 allowlist_externals =
     bash
     docker
@@ -42,6 +37,8 @@ commands =
     bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
 
 [testenv:docs]
-deps = -r{toxinidir}/docs/requirements.txt
+deps =
+    -r {toxinidir}/docs/requirements.txt
+    -c {toxinidir}/test/constraints.txt
 commands =
     sphinx-build -E -W -d docs/build/doctrees -b html docs docs/build/html
