Add pytest options
Colorize output and display summary of all items except those that passed

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,6 @@
 [pytest]
 markers =
     run_command: tests that use the run_command utility which runs a subprocess, had some historical issues
+addopts =
+    --color yes
+    -r a
