Update contributing docs and add tox environment
Add descriptions to tox environments.
Be explicit about instnalling project requirements.
Update contributing guidelines to use dev test tox environment.

--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,14 @@ usedevelop = True
 setenv =
   VIRTUAL_ENV={envdir}
 deps =
+    -r {toxinidir}/requirements.txt
     -r {toxinidir}/test/requirements.txt
     -c {toxinidir}/test/constraints.txt
 commands =
     py.test -v test -k "not integration" {posargs}
 
 [testenv:linters]
+description = Run code linters
 commands=
     flake8 --version
     flake8 ansible_builder test
@@ -20,6 +22,7 @@ commands=
     yamllint -s .
 
 [testenv:integration]
+description = Run intergration tests
 # rootless podman reads $HOME
 passenv =
     HOME
@@ -37,8 +40,13 @@ commands =
     bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
 
 [testenv:docs]
+description = Build docs
 deps =
     -r {toxinidir}/docs/requirements.txt
     -c {toxinidir}/test/constraints.txt
 commands =
     sphinx-build -E -W -d docs/build/doctrees -b html docs docs/build/html
+
+[testenv:dev]
+description = Setup development environment
+commands =
