--- a/tox.ini
+++ b/tox.ini
@@ -1,24 +1,28 @@
 [tox]
-envlist = linters, py3, integration
+envlist = linters, unit
 isolated_build = True
 
 [testenv]
+description = Run all tests with {basepython}
 usedevelop = True
-setenv =
-  VIRTUAL_ENV={envdir}
 deps =
     -r {toxinidir}/test/requirements.txt
-commands =
-    py.test -v test -k "not integration" {posargs}
+commands = pytest {posargs:test}
 
 [testenv:linters]
+description = Run code linters
 commands=
     flake8 --version
     flake8 ansible_builder test
     yamllint --version
     yamllint -s .
 
+[testenv:unit]
+description = Run unit tests
+commands = pytest {posargs:test/unit}
+
 [testenv:integration]
+description = Run integration tests
 # rootless podman reads $HOME
 passenv =
     HOME
