--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
     yamllint --version
     yamllint -s .
 
-[testenv:unit]
+[testenv:unit{,-py38, -py39}]
 description = Run unit tests
 commands = pytest {posargs:test/unit}
 
