Specify default test path in pytest.ini rather than tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,11 @@ description = Run all tests with {basepython}
 usedevelop = True
 deps =
     -r {toxinidir}/test/requirements.txt
-commands = pytest {posargs:test}
+commands = pytest {posargs}
 
 [testenv:linters]
 description = Run code linters
-commands=
+commands =
     flake8 --version
     flake8 ansible_builder test
     yamllint --version
