Separate tox installation and tox env setup steps
Also, don't be fancy about the Python executable.

Since integration tests are currently run in a VM which will only have one
Python version installed, I don't need to be explicit about the Python version
invoking pip.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,10 +72,13 @@ jobs:
         with:
           python-version: ${{ matrix.py_version.name }}
 
-      - name: Setup test environment
+      - name: Install tox
         run: |
-          ${{ format('python{0}', matrix.py_version) }} -m pip install --upgrade pip
-          ${{ format('python{0}', matrix.py_version) }} -m pip install tox
+          python3 -m pip install --upgrade pip
+          python3 -m pip install tox
+
+      - name: Create tox environment
+        run: |
           tox --notest
 
       - name: Run integration tests
