Pin documentation requirements for consistent builds

--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,8 @@ commands =
     bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
 
 [testenv:docs]
+description = Build documentation
 deps = -r{toxinidir}/docs/requirements.txt
+skip_install = True
 commands =
-    sphinx-build -E -W -d docs/build/doctrees -b html docs docs/build/html
+    sphinx-build -T -E -W -n --keep-going {tty:--color} -j auto -d docs/build/doctrees -b html docs docs/build/html
