--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,4 +16,8 @@ sphinx:
 
 python:
   install:
+    # Installation is needed in order to get the version string
+    - method: pip
+      path: .
+
     - requirements: docs/requirements.txt
