--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,18 @@
 [pytest]
 markers =
-    run_command: tests that use the run_command utility which runs a subprocess, had some historical issues
+    run_command: tests that use the run_command utility which runs a subprocess
+testpaths = test
+addopts =
+    -r a
+    --color yes
+    --showlocals
+    --verbose
+    --numprocesses auto
+    --durations 10
+    --durations-min 1
+    --strict-markers
+    --cov
+    --cov-report html
+    --cov-report term
+    --cov-report xml
+
