--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ commands =
 description = Run unit tests
 commands = pytest {posargs:test/unit}
 
-[testenv:integration]
+[testenv:integration{,-py38, -py39}]
 description = Run integration tests
 # rootless podman reads $HOME
 passenv =
@@ -33,11 +33,7 @@ allowlist_externals =
     mkdir
     podman
 commands =
-    mkdir -p artifacts
-    python setup.py sdist
-    podman build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
-    docker build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
-    bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
+    pytest --junitxml={toxinidir}/test/artifacts/results.xml {posargs:test/integration}
 
 [testenv:docs]
 description = Build documentation
