--- a/tox.ini
+++ b/tox.ini
@@ -41,3 +41,12 @@ deps = -r{toxinidir}/docs/requirements.txt
 skip_install = True
 commands =
     sphinx-build -T -E -W -n --keep-going {tty:--color} -j auto -d docs/build/doctrees -b html docs docs/build/html
+
+[testenv:clean]
+description = Erase docs and coverage artifacts
+deps =
+skip_install = True
+allow_external = /bin/sh
+commands =
+    /bin/sh -c "rm -rf {toxinidir}/test/coverage/*"
+    /bin/sh -c "rm -rf {toxinidir}/docs/{_,}build"
