[release_1.0] Add coverage reporting, requirements, update gitignore (#308)
Add coverage reporting, requirements, update gitignore

Reviewed-by: David Shrewsbury <None>
Reviewed-by: None <None>
(cherry picked from commit 42df2c5211bfc5ba9162267cdec6205a8a5bc8cf)

Co-authored-by: Sam Doran <sdoran@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -7,15 +7,11 @@ usedevelop = True
 setenv =
   VIRTUAL_ENV={envdir}
 deps =
-    pytest
+    -r {toxinidir}/test/requirements.txt
 commands =
     py.test -v test -k "not integration" {posargs}
 
 [testenv:linters]
-deps =
-    flake8
-    pylint
-    yamllint
 commands=
     flake8 --version
     flake8 ansible_builder test
@@ -27,8 +23,6 @@ commands=
 passenv =
     HOME
     KEEP_IMAGES
-deps =
-    pytest-xdist
 allowlist_externals =
     bash
     docker
@@ -47,3 +41,12 @@ deps = -r{toxinidir}/docs/requirements.txt
 skip_install = True
 commands =
     sphinx-build -T -E -W -n --keep-going {tty:--color} -j auto -d docs/build/doctrees -b html docs docs/build/html
+
+[testenv:clean]
+description = Erase docs and coverage artifacts
+deps =
+skip_install = True
+allow_external = /bin/sh
+commands =
+    /bin/sh -c "rm -rf {toxinidir}/test/coverage/*"
+    /bin/sh -c "rm -rf {toxinidir}/docs/{_,}build"
