Switch to `pull_request_target` for labeler
This allows PRs from forks to edit the PR

--- a/.github/workflows/triage.yml
+++ b/.github/workflows/triage.yml
@@ -9,10 +9,9 @@ on:
   issues:
     types:
       - opened
+      - reopened
 
-  pull_request:
-    types:
-      - opened
+  pull_request_target:
 
 jobs:
   triage:
