--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -16,7 +16,7 @@ body:
           [#ansible-builder](https://web.libera.chat/#ansible-builder)
 
 
-  - type:
+  - type: textarea
     attributes:
       label: Summary
       description: Describe the new feature and how it would be used.
