Do not create junitxml file in test/artifacts
I'm not sure what this was used for and it deposits an artifact in the source
tree that is not ignored.

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ passenv =
     HOME
     KEEP_IMAGES
 commands =
-    pytest --junitxml={toxinidir}/test/artifacts/results.xml {posargs:test/integration}
+    pytest {posargs:test/integration}
 
 [testenv:docs]
 description = Build documentation
