Also trigger for release branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,12 @@ on:
   pull_request:
     branches:
       - devel
+      - release_*
 
   push:
     branches:
       - devel
+      - release_*
 
   schedule:
     - cron: '00 04 * * *'
