Put command on single line since it's now just a simple command

--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,7 @@ description = Run integration tests
 passenv =
     HOME
     KEEP_IMAGES
-commands =
-    pytest {posargs:test/integration}
+commands = pytest {posargs:test/integration}
 
 [testenv:docs]
 description = Build documentation
