--- a/tox.ini
+++ b/tox.ini
@@ -1,39 +1,33 @@
 [tox]
-envlist = linters, py3, integration
+envlist = linters, unit
 isolated_build = True
 
 [testenv]
+description = Run all tests with {basepython}
 usedevelop = True
-setenv =
-  VIRTUAL_ENV={envdir}
 deps =
     -r {toxinidir}/test/requirements.txt
-commands =
-    py.test -v test -k "not integration" {posargs}
+commands = pytest {posargs}
 
 [testenv:linters]
-commands=
+description = Run code linters
+commands =
     flake8 --version
     flake8 ansible_builder test
     yamllint --version
     yamllint -s .
 
-[testenv:integration]
+[testenv:unit{,-py38,-py39}]
+description = Run unit tests
+commands = pytest {posargs:test/unit}
+
+[testenv:integration{,-py38,-py39}]
+description = Run integration tests
 # rootless podman reads $HOME
 passenv =
     HOME
     KEEP_IMAGES
-allowlist_externals =
-    bash
-    docker
-    mkdir
-    podman
-commands =
-    mkdir -p artifacts
-    python setup.py sdist
-    podman build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
-    docker build --rm=true -t quay.io/ansible/ansible-builder -f Containerfile .
-    bash -c 'pytest test/integration -v -n `python -c "import multiprocessing; print(int(multiprocessing.cpu_count()/2))"` --junitxml=artifacts/results.xml {posargs}'
+commands = pytest {posargs:test/integration}
 
 [testenv:docs]
 description = Build documentation
