--- a/tox.ini
+++ b/tox.ini
@@ -17,11 +17,11 @@ commands =
     yamllint --version
     yamllint -s .
 
-[testenv:unit{,-py38,-py39}]
+[testenv:unit{,-py38,-py39,-py310}]
 description = Run unit tests
 commands = pytest {posargs:test/unit}
 
-[testenv:integration{,-py38,-py39}]
+[testenv:integration{,-py38,-py39,-py310}]
 description = Run integration tests
 # rootless podman reads $HOME
 passenv =
