--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,13 +67,13 @@ jobs:
       fail-fast: false
       matrix:
         py_version:
-          - name: 3.8
+          - name: '3.8'
             tox_env: integration-py38
 
-          - name: 3.9
+          - name: '3.9'
             tox_env: integration-py39
 
-          - name: 3.10
+          - name: '3.10'
             tox_env: integration-py310
 
 
@@ -113,13 +113,13 @@ jobs:
       fail-fast: false
       matrix:
         py_version:
-          - name: 3.8
+          - name: '3.8'
             tox_env: unit-py38
 
-          - name: 3.9
+          - name: '3.9'
             tox_env: unit-py39
 
-          - name: 3.10
+          - name: '3.10'
             tox_env: unit-py310
 
     steps:
