--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,6 +96,12 @@ jobs:
         run: |
           tox
 
+      - name: Upload coverage report
+        run: |
+          curl --silent --show-error --output codecov https://ansible-ci-files.s3.us-east-1.amazonaws.com/codecov/linux/codecov
+          chmod +x codecov
+          ./codecov --file test/coverage/reports/coverage.xml --flags {{ matrix.py_version.tox_env }}
+
 
   unit:
     name: Unit - ${{ matrix.py_version.name}}
@@ -125,3 +131,6 @@ jobs:
 
       - name: Run tests
         run: tox
+
+      - name: Upload coverage report
+        run: codecov --file test/coverage/reports/coverage.xml --flags {{ matrix.py_version.tox_env }}
