Add pulp_integration framework

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,53 @@ jobs:
         run: tox
 
 
+  pulp_integration:
+    runs-on: ubuntu-20.04
+    name: Pulp Integration - ${{ matrix.py_version.name }}
+
+    env:
+      TOXENV: ${{ matrix.py_version.tox_env }}
+
+    strategy:
+      fail-fast: false
+      matrix:
+        py_version:
+          - name: '3.10'
+            tox_env: pulp-integration-py310
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Python ${{ matrix.py_version.name }}
+        uses: actions/setup-python@v2
+        with:
+          py-version: ${{ matrix.py_version.name }}
+
+      - name: Install tox
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install tox
+
+      - name: Install pulp_cli
+        run: |
+          python3 -m pip install pulp_cli[pygments]
+
+      - name: Setup pulp
+        env:
+          BUILDER_RH_REGISTRY: ${{ secrets.RH_REGISTRY }}
+        run: |
+          ./setup_pulp.sh "$BUILDER_RH_REGISTRY"
+
+      - name: Create tox environment
+        run: |
+          tox --notest
+
+      - name: Run pulp integration tests
+        run: |
+          tox
+
+
   integration:
     runs-on: ubuntu-20.04
     name: Integration - ${{ matrix.py_version.name }}
