--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,10 @@ commands =
 description = Run unit tests
 commands = pytest {posargs:test/unit}
 
+[testenv:pulp-integration{,-py310}]
+description = Run pulp integration tests
+commands = pytest {posargs:test/pulp_integration}
+
 [testenv:integration{,-py38,-py39,-py310}]
 description = Run integration tests
 # rootless podman reads $HOME
