Add pulp integration tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 markers =
     run_command: tests that use the run_command utility which runs a subprocess
     test_all_runtimes: Generate a test for each supported container runtime
+    serial: Tests that need to run serially
 testpaths = test
 addopts =
     -r a
