--- a/tox.ini
+++ b/tox.ini
@@ -22,8 +22,10 @@ description = Run unit tests
 commands = pytest {posargs:test/unit}
 
 [testenv:pulp-integration{,-py310}]
+# Some of these tests must run serially because of a shared resource
+# (the system policy.json file).
 description = Run pulp integration tests
-commands = pytest {posargs:test/pulp_integration}
+commands = pytest -n 1 -m "serial" {posargs:test/pulp_integration}
 
 [testenv:integration{,-py38,-py39,-py310}]
 description = Run integration tests
