Fix secrets_preflight check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,14 @@ jobs:
   secrets_preflight:
     runs-on: ubuntu-20.04
     name: Secrets pre-flight check
+    env:
+      secret_user: ${{ secrets.RH_REGISTRY_USER }}
+      secret_pass: ${{ secrets.RH_REGISTRY_PASSWORD }}
     steps:
       - id: has_secrets
+        if: ${{ env.secret_user != '' && env.secret_pass != '' }}
         run: |
-          echo "::set-output name=has_secrets::${{ secrets.RH_REGISTRY_USER && secrets.RH_REGISTRY_PASSWORD }}"
+          echo "::set-output name=has_secrets::${{ true }}"
     outputs:
       has_secrets: ${{ steps.has_secrets.outputs.has_secrets }}
 
