Fix CI failures (#1)
* Fix linting

* Fix unit tests

* Remove py38 testing

* Fix integration tests

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
     yamllint --version
     yamllint -s .
 
-[testenv:unit{,-py38,-py39,-py310}]
+[testenv:unit{,-py39,-py310}]
 description = Run unit tests
 commands = pytest {posargs:test/unit}
 
@@ -27,7 +27,7 @@ commands = pytest {posargs:test/unit}
 description = Run pulp integration tests
 commands = pytest -n 1 -m "serial" {posargs:test/pulp_integration}
 
-[testenv:integration{,-py38,-py39,-py310}]
+[testenv:integration{,-py39,-py310}]
 description = Run integration tests
 # rootless podman reads $HOME
 passenv =
