--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,22 +4,23 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 docutils==0.17.1
 idna==3.3
-imagesize==1.2.0
+imagesize==1.3.0
 Jinja2==3.0.2
 MarkupSafe==2.0.1
 packaging==21.0
 pbr==5.6.0
-Pygments==2.10.0
+Pygments==2.12.0
 pyparsing==3.0.3
 pytz==2021.3
 requests==2.26.0
 six==1.16.0
 snowballstemmer==2.1.0
-Sphinx==4.2.0
+Sphinx==5.3.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
+sphinx-ansible-theme == 0.10.1
 urllib3==1.26.7
